
- Avoid a case where SSHing into an ASG can actually log into a random instance
  in the cluster. It looks like ``DescribeInstances(InstanceIds=[])`` is
  interpreted as 'any instance'.

- Make sure when bringing up an ASG for the first time it's metadata is updated
  after at least one instance becomes healthy. This avoids cases where the ASG
  looks empty to later steps of the deployment.


0.0.12 (2015-05-14)
-------------------

- We now use botocore at least 0.107.0. This version changed the structure of
  its metadata folders. In order to continue overriding some values we've had
  to mirror that change, which breaks support for older versions.


0.0.11 (2015-05-14)
-------------------

- The release merges the fuselage integration refactor. You no longer have to
  import bits of fuselage to use it, you can use touchdown serializers and you
  can use it against your local machine. This means you can generate a
  ``local_settings.py`` for your Django dev environment with AWS resource
  details in it!

  A simple example is just::

      from touchdown.core import serializers

      provisioner = workspace.add_fuselage_bundle(
          target=workspace.add_local(),
      )

      provisioner.add_file(
          name="/home/john/hello",
          contents=serializers.Const("HELLO!!"),
      )

  Thanks to @mitchellrj for this feature.

- Print our resource ids after resource creation. This is particularly useful
  for AMI creation and copying.

- Better SSH connection retrying when tunneling.


0.0.10 (2015-05-07)
-------------------

- The parallel resolver introduced in 0.0.7 is now enabled by default.

- We've added more validation! Bucket names are now validated with the same
  rules as the web console. You can only use storage_encrypted with a subset of
  RDS instance sizes. We know capture that before making a single AWS call.

- asg: We now wait for there to be at least one healthy instance when creating
  a new auto scaling group.
